--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.level4">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,8 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name=".app.MyApplication">
+        android:name=".app.MyApplication"
+        android:usesCleartextTraffic="true">
         <activity android:name=".activity.MainActivity">
+
+        </activity>
+
+        <activity android:name=".login.APPLoginView">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
