--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,4 +1,5 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
+
 
 def androidConfig = rootProject.ext.android
 def libConfig = rootProject.ext.dependenciesCode;
@@ -6,47 +7,32 @@ def libConfig = rootProject.ext.dependenciesCode;
 android {
     compileSdkVersion androidConfig.compileSdkVersion
     buildToolsVersion androidConfig.buildToolsVersion
+
+
     defaultConfig {
-        applicationId androidConfig.applicationId
         minSdkVersion androidConfig.minSdkVersion
         targetSdkVersion androidConfig.targetSdkVersion
         versionCode androidConfig.versionCode
         versionName androidConfig.versionName
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        //Arouter
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments = [AROUTER_MODULE_NAME: project.getName()]
-            }
-        }
-
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation libConfig.appcompat
-    implementation libConfig.constraint
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
-    //arouter注解
-    annotationProcessor libConfig.annotationArouter
-
-    implementation project(path: ':command')
-    implementation project(path: ':core')
-    implementation project(path: ':home')
-
-    if(isRunHomeModule.toBoolean()){
-        implementation project(path: ':home')
-    }
-
 }
