--- a/home/src/main/AndroidManifest.xml
+++ b/home/src/main/AndroidManifest.xml
@@ -1,2 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.home" />
+    package="com.example.home" >
+    <application>
+        <activity android:name=".HomeMainActivity"/>
+    </application>
+</manifest>
+
