--- a/config.gradle
+++ b/config.gradle
@@ -12,7 +12,20 @@ ext{
     versionNumber = [
             constraintVersion:"1.1.3",
             arouterVersion:"1.5.0",
-            annotationArouterVersion:"1.2.2"
+            annotationArouterVersion:"1.2.2",
+
+            retrofit:"2.5.0",
+            retrofitgson:"2.5.0",
+            retrofitrxjava:"2.5.0",
+            gson:"2.8.5",
+            rxandroid:"2.1.0",
+            rxjava:"2.2.5",
+            okhttplog:"3.5.0",
+            glide:"4.9.0",
+            disklru:"2.0.2",
+            autodisposearchcomponents:"1.0.0-RC3",
+            autodispose:"1.0.0-RC3"
+
     ]
 
     dependenciesCode = [
@@ -20,7 +33,20 @@ ext{
             constraint:"com.android.support.constraint:constraint-layout:$versionNumber.constraintVersion",
 
             arouter: "com.alibaba:arouter-api:$versionNumber.arouterVersion",
-            annotationArouter: "com.alibaba:arouter-compiler:$versionNumber.annotationArouterVersion"
+            annotationArouter: "com.alibaba:arouter-compiler:$versionNumber.annotationArouterVersion",
+
+            retrofit:"com.squareup.retrofit2:retrofit:$versionNumber.retrofit",
+            retrofitgson:"com.squareup.retrofit2:converter-gson:$versionNumber.retrofitgson",
+            retrofitrxjava:"com.squareup.retrofit2:adapter-rxjava2:$versionNumber.retrofitrxjava",
+            okhttplog:"com.squareup.okhttp3:logging-interceptor:$versionNumber.okhttplog",
+            gson:"com.google.code.gson:gson:$versionNumber.gson",
+            rxandroid:"io.reactivex.rxjava2:rxandroid:$versionNumber.rxandroid",
+            rxjava:"io.reactivex.rxjava2:rxjava:$versionNumber.rxjava",
+
+            autodisposearchcomponents:"com.uber.autodispose:autodispose-android-archcomponents:$versionNumber.autodisposearchcomponents",
+            autodispose:"com.uber.autodispose:autodispose-android:$versionNumber.autodispose",
+            glide:"com.github.bumptech.glide:glide:$versionNumber.glide",
+            disklru:"com.jakewharton:disklrucache:$versionNumber.disklru"
     ]
 }
 
